# diag-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  archive.html  diagram.mmd  diagram.puml  docker-compose.yml  feed.xml  index.html  lunrjsindex.js  pyproject.toml  search.html  sitemap.xml
.github/workflows/: gh-pages.yml
.vibe/: development-plan-feature-description-validation.md  development-plan-feature-examples-in-prompt.md  development-plan-feature-fix-validation-format.md  development-plan.md
arc42/: arc42.html
arc42/adr/: ADR-001-bash-tool-vs-mcp-draft.html  ADR-002-agent-self-iteration-draft.html  ADR-003-local-first-remote-draft.html  ADR-004-url-references-draft.html  ADR-005-litetllm-abstraction-draft.html  ADR-006-docker-bundled-kroki-draft.html  ADR-007-source-file-write-draft.html  ADR-008-click-cli-draft.html  ADR-009-uv-for-package-management-draft.html
arc42/chapters/: 01_introduction_and_goals.html  02_architecture_constraints.html  03_context_and_scope.html  04_solution_strategy.html  05_building_block_view.html  06_runtime_view.html  07_deployment_view.html  08_concepts.html  09_architecture_decisions.html  10_quality_requirements.html  11_technical_risks.html  12_glossary.html  about-arc42-draft.html  config-draft.html
diagrams/: diagram.puml
docs/diagrams/: orchestrator-workflow-bpmn.bpmn  orchestrator-workflow.bpmn  orchestrator-workflow.puml
src/diag_agent/: __main__.py
src/diag_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/docs/: arc42-draft.adoc  backlog.adoc  tutorial.md  user-guide.md
test-bpmn-fixed/: diagram.bpmn
test-output/: diagram.mmd
test-output2/: diagram.puml
test_output/: diagram.puml
tests/unit/: test_cli.py  test_kroki_client.py  (+7 more)
(+51 files in other folders)
